--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
   height: 100vh;
 }
 
-.main-wrapper {
-  /* display: flex; */
-}
+/* .main-wrapper {
+  display: flex;
+} */
 
 .book-image {
   width: 240px;
@@ -29,27 +29,77 @@ body {
    width: 240px;
 }
 
-.timer {
+.timer-wrapper {
+  display: flex;
+  flex-direction: column;
   color: #fff;
   font-size: 15vw;
+  font-family: Georgia, serif;
   text-align: center;
-  height: 50vh;
+  height: 40vh;
   line-height: 2;
 }
+.timer-wrapper span {
+  height: 35vh;
+}
+.timer-wrapper button {
+  width: 130px;
+  font-size: 24px;
+  font-family: Georgia, serif;
+  align-self: center;
+  cursor: pointer;
+  padding: 12.5px 25px;
+  border-radius: 23px;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: white;
+  text-decoration: none;
+  vertical-align: middle;
+  
+  border-top: 1px solid #96d1f8;
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#1d2429), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #1d2429, #65a9d7);
+  background: -moz-linear-gradient(top, #1d2429, #65a9d7);
+  background: -ms-linear-gradient(top, #1d2429, #65a9d7);
+  background: -o-linear-gradient(top, #1d2429, #65a9d7);
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -webkit-border-radius: 23px;
+  -moz-border-radius: 23px;
+}
+.timer-wrapper button:hover {
+  border-top-color: #8ba1b0;
+  background: #8ba1b0;
+  color: #120112;
+  text-shadow: 5px 5px 5px #fff;
+}
+.timer-wrapper button:focus {
+  outline: 0;
+ }
+.timer-wrapper button:active {
+  border-top-color: #1b435e;
+  background: #1b435e;
+ }
 
 .log-wrapper {
   position: absolute;
   right: 3%;
-  bottom: 3%;
+  top: 40%;
+  height: 355px;
+  overflow: scroll;
 }
 
-#book-log {
+.book-log {
   background-color: transparent;
   border: none;
-  color: white;
-  font-size: 24px;
+  font-size: 20px;
+  font-family: Georgia, serif;
+  color : transparent;
+  text-shadow : 0 0 0 #fff;
 }
 
-#book-log:focus {
+.book-log:focus {
   outline: 0;
+  outline : none;
 }
