bookspage レイアウト作成

--- a/style.css
+++ b/style.css
@@ -8,16 +8,44 @@ body {
   /* font-family: 'MyFont'; */
 }
 
-.main-container {
-  background-image: url('./assets/back_img.jpg');  
+header {
+  position: fixed;
+}
+
+h1 {
+  margin: 0;
+  padding-top: 20px;
+  /* position: fixed; */
+  text-align: center;
+}
+
+.main-container #timerPage {
+  background-image: url('./assets/back_img.jpg');
   background-size: cover;
   height: 100vh;
+}
+
+.main-container #booksPage {
+  background-image: url('./assets/back_img2.jpg');
+  background-size: cover;
+  height: 100vh;  
+  background-attachment: fixed;
+  font-family: 'MyFont';
+  overflow: scroll;
+}
+
+.main-container #singlPage {
+  background-image: url('./assets/back_img3.jpg');  
+  background-size: cover;
+  height: 100vh;
+  font-family: 'MyFont';
 }
 
 /* .main-wrapper {
   display: flex;
 } */
 
+/* timerPageのCSS */
 .book-image {
   width: 240px;
   position: absolute;
@@ -103,3 +131,32 @@ body {
   outline: 0;
   outline : none;
 }
+
+/* booksPageのCSS */
+.book-img-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 0;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.book-img-wrapper li {
+  list-style: none;
+  margin: 10px;
+  /* flex-grow: 1; */
+}
+
+.book-img-wrapper img {
+  margin-top: 10px;
+  width: 18vw;
+  max-width: 180px;
+  opacity: .9;
+}
+@media screen and (max-width:400px) {
+  .book-img-wrapper img {
+    width: 28vw;
+  }
+}
+
