--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,22 @@ h1 {
   text-align: center;
 }
 
+/* .main-modal, .sub-modal {
+  display: none;
+} */
+
+#modal-overlay{
+	z-index:1;
+	display:none;
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:120%;
+	background-color:rgba(0,0,0,0.75);
+}
+
+
 #loged {
   font-family: Georgia, serif;
   cursor: pointer;
@@ -467,7 +483,7 @@ td:first-of-type {
 
 
 /* スマホサイズ */
-@media screen and (max-width:400px) {
+@media screen and (max-width:500px) {
   .nes-field {
     width: 80%;
     margin: auto;
@@ -482,8 +498,34 @@ td:first-of-type {
     font-size: 12px;
     opacity: .7;
   }
+  .timer-wrapper {
+    font-size: 25vw;
+  }
   .book-img-wrapper img {
     width: 28vw;
   }
+  .book-log {
+    display: none;
+  }
+  #liblary li:not(.damey) img {
+    height: 180px;
+  }
+  #searchDialog button {
+    width: 70px;
+  }
+  #result {
+    margin-top: 10px;
+  }
+  #result .item {
+    display: block;
+  }
+  #result .regist-btn {
+    width: 100px;
+  }
+  #editDialog .edit-field-wrapper {
+    display: block;
+  }
+
+
 }
 
